{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 31,
  "lineage": "21afe0b6-837a-94b7-7d69-0c5e0fe432c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:vpc/vpc-03742cc5969a689f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-009e40f51be33cb61",
            "default_route_table_id": "rtb-029042edd70ccab1d",
            "default_security_group_id": "sg-00230192fec1f4499",
            "dhcp_options_id": "dopt-0bcc996372eefeb99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-03742cc5969a689f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029042edd70ccab1d",
            "owner_id": "905418404466"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:905418404466:loadbalancer/elb",
            "availability_zones": [
              "ap-southeast-1a",
              "ap-southeast-1b",
              "ap-southeast-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-1040723521.ap-southeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "instances": [
              "i-00782bfba03ef3f21",
              "i-03f4d988efb43f9c2",
              "i-0ee9c5f0b5a95b2ec"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-08268c839c89ed66c"
            ],
            "source_security_group": "905418404466/elb_sg",
            "source_security_group_id": "sg-08268c839c89ed66c",
            "subnets": [
              "subnet-0033d4fee2787305f",
              "subnet-07edebe7992034501",
              "subnet-08151730b8846beac"
            ],
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.http_servers",
            "aws_security_group.elb_sg",
            "aws_security_group.http_server_sg",
            "data.aws_ami.latest_ami",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0033d4fee2787305f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ff69880cb49e2c4",
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:instance/i-00782bfba03ef3f21",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00782bfba03ef3f21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f881f2c8dade8fca",
            "private_dns": "ip-172-31-15-75.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.75",
            "public_dns": "ec2-13-229-144-17.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.144.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0810d3b71d30a9be9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0033d4fee2787305f",
            "tags": {
              "name": "http_servers_subnet-0033d4fee2787305f"
            },
            "tags_all": {
              "name": "http_servers_subnet-0033d4fee2787305f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7df0a2c0d183468"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.latest_ami",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-07edebe7992034501",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ff69880cb49e2c4",
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:instance/i-03f4d988efb43f9c2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f4d988efb43f9c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e06857157948b290",
            "private_dns": "ip-172-31-34-156.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.156",
            "public_dns": "ec2-52-221-222-187.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.222.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0300b2513b6d25968",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07edebe7992034501",
            "tags": {
              "name": "http_servers_subnet-07edebe7992034501"
            },
            "tags_all": {
              "name": "http_servers_subnet-07edebe7992034501"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7df0a2c0d183468"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.latest_ami",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-08151730b8846beac",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ff69880cb49e2c4",
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:instance/i-0ee9c5f0b5a95b2ec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee9c5f0b5a95b2ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8529e8d13e5dc36",
            "private_dns": "ip-172-31-31-107.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.107",
            "public_dns": "ec2-18-142-229-76.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.229.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a74e1217bb6f05e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08151730b8846beac",
            "tags": {
              "name": "http_servers_subnet-08151730b8846beac"
            },
            "tags_all": {
              "name": "http_servers_subnet-08151730b8846beac"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7df0a2c0d183468"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.latest_ami",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:security-group/sg-08268c839c89ed66c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08268c839c89ed66c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "905418404466",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03742cc5969a689f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905418404466:security-group/sg-0e7df0a2c0d183468",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7df0a2c0d183468",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_server_sg",
            "name_prefix": "",
            "owner_id": "905418404466",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "http_server_sg"
            },
            "tags_all": {
              "name": "http_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03742cc5969a689f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}